# esp32-usb-wifiscanner

./: .gitignore  CMakeLists.txt
main/: CMakeLists.txt  main.c  tusb_config.h  usb_descriptors.c
main/wifi/: wifi.c  wifi.h
